# semasm

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  GOVERNANCE.md  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  book.toml  capabilities.toml  clippy.toml  deny.toml  semasm-complete-project-plan.md
.commandcode/taste/: taste.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fuzz.yml  release.yml
adr/: 0001-workspace-bootstrap.md  0002-crate-boundaries.md  0003-write-shape-buffer-leaves.md  0004-region-precise-memory-gate.md  0005-multi-isa-memcmp-write-shape.md  0006-region-alias-evidence-v1.md  0007-contract-expression-semantics-v1.md  0008-a64-rv-memory-effect-parity.md  0009-a64-rv-decode-lower-bump.md  0010-alias-proof-assumption-obligation.md  0011-region-access-evidence-v1.md  0012-length-result-bound-obligations.md  README.md
crates/semasm-aarch64/: Cargo.toml
crates/semasm-aarch64/src/: abi.rs  lib.rs  lower.rs
crates/semasm-agent/: Cargo.toml
crates/semasm-agent/fixtures/: verification-report-count_byte.execution_denied.json  verification-report-count_byte.verified.json  verification-report-find_first_byte.execution_denied.json  verification-report-find_first_byte.verified.json  verification-report-find_last_byte.execution_denied.json  verification-report-find_last_byte.verified.json  verification-report-max_usize.execution_denied.json  verification-report-max_usize.verified.json  verification-report-memcmp.execution_denied.json  verification-report-memcmp.verified.json  verification-report-min_usize.execution_denied.json  verification-report-min_usize.verified.json  verification-report-sum_i64.execution_denied.json  verification-report-sum_i64.verified.json
crates/semasm-agent/schemas/: task-packet.json  verification-report.json
crates/semasm-agent/src/: context.rs  evidence.rs  harness.rs  lib.rs  verify.rs
crates/semasm-asir/: Cargo.toml
crates/semasm-asir/src/: lib.rs
crates/semasm-build/: Cargo.toml
crates/semasm-build/src/: exec.rs  lib.rs  pipeline.rs  record.rs  report.rs
crates/semasm-build/src/exec/platform/: unix.rs  windows.rs
crates/semasm-cfg/: Cargo.toml
crates/semasm-cfg/src/: lib.rs
crates/semasm-cli/: Cargo.toml
crates/semasm-cli/src/: commands.rs  inspect.rs  main.rs  memory_effects.rs  memory_effects_aarch64.rs  memory_effects_riscv.rs  output.rs
crates/semasm-cli/tests/: agent_evidence_compare.rs  agent_verify_adversarial.rs  agent_verify_cross_target.rs  agent_verify_execution_denied.rs  agent_verify_find_first_byte.rs  agent_verify_find_first_byte_win64.rs  agent_verify_find_last_byte.rs  agent_verify_find_last_byte_win64.rs  agent_verify_max_usize.rs  agent_verify_max_usize_win64.rs  agent_verify_memcmp.rs  agent_verify_memcmp_win64.rs  agent_verify_memcpy.rs  agent_verify_memcpy_win64.rs  agent_verify_memset.rs  agent_verify_memset_win64.rs  agent_verify_min_usize.rs  agent_verify_min_usize_win64.rs  agent_verify_replace_byte.rs  agent_verify_replace_byte_win64.rs  agent_verify_sum_i64.rs  agent_verify_sum_i64_win64.rs  agent_verify_sysv_allow_execution.rs  agent_verify_win64_allow_execution.rs  agent_verify_win64_execution_denied.rs  alias_evidence_v1.rs  contract_expr_v1.rs  region_access_evidence_v1.rs
crates/semasm-contract/: COMPATIBILITY.md  Cargo.toml
crates/semasm-contract/src/: alias.rs  codes.rs  eval.rs  expr.rs  lib.rs  region_access.rs  schema.rs  sem_type.rs  validate.rs
crates/semasm-contract/tests/: negative_corpus.rs
crates/semasm-core/: Cargo.toml
crates/semasm-core/src/: diagnostic.rs  error.rs  id.rs  lib.rs  span.rs  version.rs
crates/semasm-decode/: Cargo.toml
crates/semasm-decode/src/: lib.rs
crates/semasm-obj/: Cargo.toml
crates/semasm-obj/src/: lib.rs
crates/semasm-obj/tests/: negative_corpus.rs
crates/semasm-riscv/: Cargo.toml
crates/semasm-riscv/src/: abi.rs  lib.rs  lower.rs
crates/semasm-target/: Cargo.toml
crates/semasm-target/src/: abi.rs  capability.rs  lib.rs  tools.rs
crates/semasm-x86/: Cargo.toml
crates/semasm-x86/src/: abi.rs  abi_win64.rs  analysis.rs  lib.rs  lower.rs
docs/: A64_RV_ADVERSARIAL_TWINS_PLAN.md  A64_RV_CONTROL_GATE_PLAN.md  A64_RV_DECODE_LOWER_BUMP_PLAN.md  A64_RV_MEMORY_EFFECT_PARITY_PLAN.md  A64_RV_MEMORY_LEAF_PLAN.md  ABI_ANALYSIS_CI_BUMP_PLAN.md  AGENT_SCHEMA_POLICY.md  CLI_COMPATIBILITY.md  CONTRACT_EXPR_V1_PLAN.md  CONTRACT_EXPR_V1_SUBSET.md  CONTROLLER_PROTOCOL.md  FORMAL_BOUNDS_CHIP_PLAN.md  REGION_ACCESS_EVIDENCE_V1_PLAN.md  RELEASE_CHECKLIST.md  REPORT_SCHEMA_POLICY.md  SEMANTIC_EVIDENCE_INTEGRITY_PLAN.md  STABILIZATION_PROGRESS.md
docs/src/: SUMMARY.md  introduction.md  quickstart.md
docs/status/: BASELINE-2026-07.md
fixtures/asm/: count_byte.asm  count_byte_aarch64.S  count_byte_callee_saved.asm  count_byte_callee_saved_aarch64.S  count_byte_callee_saved_riscv64.S  count_byte_callee_saved_win64.asm  count_byte_ecall_riscv64.S  count_byte_import.asm  count_byte_import_win64.asm  count_byte_indirect.asm  count_byte_indirect_aarch64.S  count_byte_indirect_riscv64.S  count_byte_indirect_win64.asm  count_byte_noexport.asm  count_byte_noexport_win64.asm  count_byte_red_zone.asm  count_byte_riscv64.S  count_byte_stack_imbalance.asm  count_byte_stack_imbalance_aarch64.S  count_byte_stack_imbalance_riscv64.S  count_byte_stack_imbalance_win64.asm  count_byte_svc_aarch64.S  count_byte_syscall.asm  count_byte_syscall_win64.asm  count_byte_trailing_bytes.asm  count_byte_trailing_bytes_aarch64.S  count_byte_trailing_bytes_riscv64.S  count_byte_trailing_bytes_win64.asm  count_byte_unknown_insn.asm  count_byte_unknown_insn_aarch64.S  count_byte_unknown_insn_cpuid.asm  (+105 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: cfg.rs  contract.rs  decoder.rs  expression.rs  lowering.rs  object.rs  report.rs
rfcs/: README.md
scripts/: baseline.ps1  baseline.sh  check-all.ps1  check-all.sh  golden-demo.ps1  golden-demo.sh  verify-release.ps1  verify-release.sh
(+27 files in other folders)
