[workspace]
resolver = "2"
members = [
    "crates/semasm-core",
    "crates/semasm-contract",
    "crates/semasm-asir",
    "crates/semasm-target",
    "crates/semasm-build",
    "crates/semasm-agent",
    "crates/semasm-cli",
    "crates/semasm-obj",
]
default-members = ["crates/semasm-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/megaalive/semasm"
homepage = "https://github.com/megaalive/semasm"
authors = ["SemASM contributors"]
categories = ["development-tools", "compilers"]
keywords = ["assembly", "semantics", "abi", "asir", "semasm"]
readme = "README.md"

[workspace.dependencies]
semasm-core = { path = "crates/semasm-core", version = "0.1.0" }
semasm-contract = { path = "crates/semasm-contract", version = "0.1.0" }
semasm-asir = { path = "crates/semasm-asir", version = "0.1.0" }
semasm-target = { path = "crates/semasm-target", version = "0.1.0" }
semasm-build = { path = "crates/semasm-build", version = "0.1.0" }
semasm-agent = { path = "crates/semasm-agent", version = "0.1.0" }
semasm-obj = { path = "crates/semasm-obj", version = "0.1.0" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = "2.0"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
sha2 = "0.10"
object = { version = "0.36", default-features = false, features = ["read", "std", "elf", "pe", "macho"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
