[package]
name = "semasm-aarch64"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AArch64 register/alias model and AAPCS64 rules for SemASM"
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
semasm-decode = { workspace = true }
semasm-asir = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
