[package]
name = "semasm-asir"
description = "Assembly Semantic Intermediate Representation (ASIR) types for SemASM"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
semasm-core = { workspace = true }

[lints]
workspace = true
