[package]
name = "semasm-build"
description = "Safe process execution wrapper for SemASM build pipelines"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
semasm-core = { workspace = true }
semasm-target = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
semasm-obj = { workspace = true }

[lints]
workspace = true
