[package]
name = "semasm-cfg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Control-flow graph extraction for SemASM decoded instructions"
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
semasm-decode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
semasm-decode = { workspace = true, features = ["capstone"] }

[features]
default = []
# Forwards to the decode backend so the CFG tests can decode real fixtures.
# The CFG extractor itself is backend-agnostic (operates on
# PhysicalInstruction) and does not require Capstone.
capstone = ["semasm-decode/capstone"]

[lints]
workspace = true
