[package]
name = "semasm-cli"
description = "Command-line interface for SemASM"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "semasm"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
semasm-core = { workspace = true }
semasm-contract = { workspace = true }
semasm-asir = { workspace = true }
semasm-target = { workspace = true }

[lints]
workspace = true
