[package]
name = "semasm-cli"
description = "Command-line interface for SemASM"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "semasm"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semasm-core = { workspace = true }
semasm-contract = { workspace = true }
semasm-asir = { workspace = true }
semasm-build = { workspace = true }
semasm-target = { workspace = true }
semasm-agent = { workspace = true }
semasm-obj = { workspace = true }
semasm-decode = { workspace = true, optional = true }
semasm-cfg = { workspace = true, optional = true }

[features]
default = []
capstone = ["semasm-decode/capstone", "semasm-cfg/capstone"]

[lints]
workspace = true
