[package]
name = "semasm-contract"
description = "Portable semantic contract types and parsing for SemASM"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
semasm-core = { workspace = true }

[lints]
workspace = true
