[package]
name = "semasm-decode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Physical-instruction decoder adapter for SemASM (Capstone-backed, feature-gated)"
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
semasm-core = { workspace = true }
semasm-target = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
capstone = { version = "0.14", optional = true }

[features]
default = []
capstone = ["dep:capstone"]

[dev-dependencies]

[lints]
workspace = true
