[package]
name = "semasm-obj"
description = "ELF/PE/Mach-O object inspection for SemASM"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
object = { workspace = true }
semasm-target = { workspace = true }
semasm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
