[package]
name = "semasm-riscv"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RISC-V register and alias model for SemASM"
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
semasm-decode = { workspace = true }
semasm-asir = { workspace = true }

[lints]
workspace = true