[package]
name = "semasm-target"
description = "Target identity, kits, and capability interfaces for SemASM"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
semasm-core = { workspace = true }
serde = { workspace = true }
schemars = { version = "1.0", optional = true }

[features]
schema = ["schemars"]

[lints]
workspace = true
