[package]
name = "semasm-x86"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "x86-64 register/alias model and System V register classes for SemASM"

[dependencies]
serde = { workspace = true, features = ["derive"] }
semasm-decode = { workspace = true }
semasm-asir = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
