[package]
name = "semasm-x86"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "x86-64 register/alias model and System V register classes for SemASM"
repository.workspace = true
authors.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
semasm-decode = { workspace = true }
semasm-asir = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
